--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
         <form>
-            <div class="row">
+            <div class="row mb-2">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
                     <input id="name" type="text" class="form-control">
@@ -12,8 +12,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Add</button>
+                <div class="col-xs-12 d-flex gap-2">
+                    <button class="btn btn-success mr-15" type="submit">Add</button>
                     <button class="btn btn-danger" type="button">Delete</button>
                     <button class="btn btn-primary" type="reset">Reset</button>
                 </div>
