--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <hr>
-<div class="row">
+<div class="row gx-0">
     <div class="col-xs-12 list-group">
         <a href="#" 
             *ngFor="let recipe of recipes" 
