--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -5,12 +5,13 @@
       <input type="text" class="form-control" [(ngModel)]="newServerName">
       <label>Server Content</label>
       <input type="text" class="form-control" [(ngModel)]="newServerContent">
-      <br>
-      <button
+      <div class="d-flex gap-2 mt-2">
+        <button
         class="btn btn-primary"
         (click)="onAddServer()">Add Server</button>
       <button
         class="btn btn-primary"
         (click)="onAddBlueprint()">Add Server Blueprint</button>
+      </div>
     </div>
   </div>
