add changable details component

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
 <a href="#" 
     class="list-group-item list-group-item-action d-flex justify-content-between"
+    (click)="onSelect()"
 >
     <div class="pull-start">
         <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
