--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-fluid img-thumbnail">
+        <img [src]="recipe.imgUrl" [alt]="recipe.name" class="img-fluid img-thumbnail">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe name</h1>
+        <h1>{{ recipe.name }}</h1>
     </div>
 </div>
 <div class="row">
@@ -24,7 +24,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Description
+        {{ recipe.description }}
     </div>
 </div>
 <div class="row">
