--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,6 +8,8 @@
     <div class="col-xs-12 list-group">
         <app-recipe-item 
         *ngFor="let recipeItem of recipes"
-        [recipe]='recipeItem'></app-recipe-item>
+        [recipe]="recipeItem"
+        (recipeSelected)='onRecipeSelected(recipeItem)'
+        ></app-recipe-item>
     </div>
 </div>
