--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,18 @@
             <div *ngIf="onlyOdd">
                 <li
                     class="list-group-item"
-                    *ngFor="let odd of oddNumbers">
+                    *ngFor="let odd of oddNumbers"
+                    [ngClass]="{ odd: odd % 2 !==0 }"
+                    [ngStyle]="{'background-color': odd % 2 !==0 ? 'lightgreen' : 'transparent'}">
                     {{ odd }}
                 </li>
             </div>
             <div *ngIf="!onlyOdd">
                 <li
                     class="list-group-item"
-                    *ngFor="let even of evenNumbers">
+                    *ngFor="let even of evenNumbers"
+                    [ngClass]="{ even: even % 2 ===0 }"
+                    [ngStyle]="{'background-color': even % 2 === 0 ? 'pink' : 'transparent'}">
                     {{ even }}
                 </li>
             </div>
