--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
         <ng-template [ngIf]="onlyOdd">
           <p>Only odd</p>
         </ng-template>
+        <p appBasicHighlight>Styled with directive</p>
       </div>
     </div>
   </div>
