--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,8 @@
         <ng-template [ngIf]="onlyOdd">
           <p>Only odd</p>
         </ng-template>
-        <p appBasicHighlight>Styled with directive</p>
+        <p appBasicHighlight>Styled with basic directive</p>
+        <p appBetterHighlight>Styled with a better directive</p>
       </div>
     </div>
   </div>
