--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,11 +10,11 @@
                 <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping list</a></li>
             </ul>
             <ul class="nav navbar-nav ms-auto">
-                <li class="dropdown">
+                <li class="dropdown" appDropdown>
                     <a href="#" class="dropdown-toggle nav-link" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <a href="#" class="dropdown-item">Save Data</a>
+                        <a href="#" class="dropdown-item">Fetch Data</a>
                     </ul>
                 </li>
             </ul>
