--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,14 +10,17 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle">
+        <div class="dropdown" appDropdown>
+            <button type="button" 
+            data-toggle="dropdown" 
+            class="btn btn-primary dropdown-toggle"
+            id="dropdownBtn">
                 Manage recipe <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu">
-                <li><a href="#">To shopping list</a></li>
-                <li><a href="#">Edit recipe</a></li>
-                <li><a href="#">Delete recipe</a></li>
+            <ul class="dropdown-menu" aria-labelledby="dropdownBtn">
+                <a href="#" class="dropdown-item">To shopping list</a>
+                <a href="#" class="dropdown-item">Edit recipe</a>
+                <a href="#" class="dropdown-item">Delete recipe</a>
             </ul>
         </div>
     </div>
