--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,7 +21,7 @@
                 <a 
                     class="dropdown-item" 
                     style="cursor: pointer"
-                    (click)="onAddToShoppingList(recipe.ingredients)">To shopping list</a>
+                    (click)="onAddToShoppingList()">To shopping list</a>
                 <a href="#" class="dropdown-item">Edit recipe</a>
                 <a href="#" class="dropdown-item">Delete recipe</a>
             </ul>
