--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
-<button class="btn btn-primary" (click)="onLoadServers()">To Servers</button>
+<button class="btn btn-primary" (click)="onLoadServers(1)">To Server 1</button>
