--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,7 +3,9 @@
     <div class="col-xs-12 col-sm-4">
       <div class="list-group">
         <a
-          href="#"
+          [routerLink]="['/servers', server.id, 'edit']"
+          [queryParams]="{editable: '1'}"
+          fragment="loading"
           class="list-group-item"
           *ngFor="let server of servers">
           {{ server.name }}
